# payload_packer

./: Cargo.toml  README.md  build.rs  changelog.md
.github/workflows/: darwin.yml  musl.yml  release.yml  windows.yml
proto/: update_metadata.proto
src/: main.rs  structs.rs
src/proto/: update_metadata.rs
tests/: README.md  test.sh
