[package]
name = "payload_packer"
version = "0.1.1"
edition = "2024"
authors = ["rhythmcache"]
description = "A standalone tool for generating full and incremental Android OTA payloads for A/B devices."
repository = "https://github.com/rhythmcache/payload_packer"
homepage = "https://github.com/rhythmcache/payload_packer"
readme = "README.md"
license = "Apache-2.0"
keywords = ["android", "payload", "packer", "partition", "cli"]
categories = ["command-line-utilities", "compression", "filesystem"]

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
digest = "0.10"
hex = "0.4"
indicatif = "0.18"
lazy_static = "1.5"
liblzma = { version = "0.4.5", features = ["static"] }
num_cpus = "1.17"
prost = "0.14.1"
rayon = "1.11"
sha2 = "0.10"
zstd = "0.13.3"
base64 = "0.22.1"
tempfile = "3.23"
bzip2 = { version = "0.6.1", features = ["static"] }
payload_dumper = { version = "0.8.1", default-features = false }
bsdiff-android = "0.0.2"
ahash = "0.8.12"
memmap2 = "0.9.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false
